[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "take_a_break"
authors = [{name = "Marduk Bolaños"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/mardukbp/take-a-break"

[project.scripts]
tab = "take_a_break.app:main"
