[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "take5"
authors = [{name = "Marduk Bolaños"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/mardukbp/take5"

[project.scripts]
take5 = "take5.app:main"
